force-app/main/default/objects/stripeGC__Stripe_Event__c/stripeGC__Stripe_Event__c.object-meta.xml
<CustomObject>
    <label>Stripe Event</label>
    <nameField>
        <displayFormat>SE-{000000}</displayFormat>
        <label>Stripe Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>