force-app/main/default/objects/stripeGC__Stripe_Event__c/fields/stripeGC__Event_Name__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Event_Name__c</fullName>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>