force-app/main/default/objects/stripeGC__Stripe_Event__c/fields/stripeGC__Request_Body__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Request_Body__c</fullName>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>