force-app/main/default/objects/stripeGC__Stripe_Event__c/fields/stripeGC__Stripe_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Stripe_Account_Type__c</fullName>
    <label>Stripe Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>