force-app/main/default/objects/stripeGC__Stripe_Event__c/fields/stripeGC__Stripe_Connected_Account__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Stripe_Connected_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Connected Account</label>
    <referenceTo>stripeGC__Stripe_Connected_Account__c</referenceTo>
    <relationshipLabel>Stripe Events</relationshipLabel>
    <relationshipName>Stripe_Events</relationshipName>
    <type>Lookup</type>
</CustomField>