force-app/main/default/objects/stripeGC__Stripe_Event__c/fields/stripeGC__Stripe_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Stripe_Event_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Stripe Event Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>