force-app/main/default/objects/stripeGC__Stripe_Event__c/listViews/stripeGC__All.listView-meta.xml
<ListView>
    <fullName>stripeGC__All</fullName>
    <columns>NAME</columns>
    <columns>stripeGC__Stripe_Account_Type__c</columns>
    <columns>stripeGC__Stripe_Account__c</columns>
    <columns>stripeGC__Stripe_Connected_Account__c</columns>
    <columns>stripeGC__Event_Name__c</columns>
    <columns>stripeGC__Stripe_Object_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>stripeGC__Request_Body__c</columns>
    <columns>stripeGC__Is_Live_Mode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>